--- a/team.html
+++ b/team.html
@@ -91,7 +91,7 @@
                         <img src="MichaelHelmreichSmall.jpg" alt="Michael Helmreich" class="member-image-horizontal">
                     </div>
                     <div class="member-name">Michael Helmreich</div>
-                    <div class="member-title">Senior Vice President</div>
+                    <div class="member-title">Partner</div>
                 </div>
                 <div class="member-info-horizontal">
                     <div class="member-bio">
