plain text formatting

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,11 @@
     <main class="content">
         <div class="contact-intro">
             <h2>Let's Start a Conversation</h2>
-            <p>Ready to secure optimal financing for your commercial real estate project? Our experienced team specializes in structuring debt solutions across all asset classes. Whether you're looking to refinance, acquire, or develop commercial properties, we're here to help you navigate the complex debt markets and achieve the best possible terms.</p>
+            <p>
+                Ready to secure optimal financing for your commercial real estate project? 
+                Our experienced team specializes in structuring debt solutions across all asset classes. 
+                Whether you're looking to refinance, acquire, or develop commercial properties, we're here to help you navigate the complex debt markets and achieve the best possible terms.
+            </p>
         </div>
 
         <div class="contact-container">
