--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                     understands your numbers like it was their building. And our years 
                     of relationship building with bankers gives us an edge with lenders. 
                     We are focused, driven, and creative – the only recipe that you can 
-                    rely on to close deals in a volatile market.</p>
+                    rely on to close deals in a volatile market.
+                </p>
                 <a href="team.html" class="team-button">MEET THE TEAM</a>
             </div>
             
