added headshot to team page

--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
             <div class="team-member-horizontal">
                 <div class="member-photo-section">
                     <div class="member-photo-horizontal">
-                        <div class="member-photo-placeholder">JG</div>
+                        <img src="JakeGluckHeadshot.JPG" alt="Jacob Gluck" class="member-image-horizontal">
                     </div>
                     <div class="member-name">Jacob Gluck</div>
                     <div class="member-title">CEO and Founder</div>
