--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section class="team-intro">
         <div class="team-intro-content">
             <div class="team-intro-left">
-                <img src="JakeGluckHeadshot.JPG" alt="Jacob Gluck" class="team-headshot">
+                <img src="JakeGluckSmall.jpg" alt="Jacob Gluck" class="team-headshot">
                 <p class="team-name">Jake Gluck</p>
                 <p class="team-title">Founder and CEO</p>
             </div>
