office address updated

--- a/privacy.html
+++ b/privacy.html
@@ -81,9 +81,8 @@
             </div>
             <div class="footer-section">
                 <h3>Office Location</h3>
-                <p>123 Business Ave, Suite 100<br>
-                New York, NY 10001<br>
-                United States</p>
+                <p>1815 Lakewood Rd<br>
+                Toms River, New Jersey 08755</p>
             </div>
         </div>
         <div class="footer-bottom">
