--- a/contact.html
+++ b/contact.html
@@ -140,9 +140,8 @@
         
         <div class="footer-section">
             <h3>Office Location</h3>
-            <p>123 Business Ave, Suite 100<br>
-            New York, NY 10001<br>
-            United States</p>
+            <p>1815 Lakewood Rd<br>
+            Toms River, New Jersey 08755</p>
         </div>
     </div>
     
